--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17451,6 +17451,7 @@ h2 span {
   padding: 20px;
   position: relative;
   margin-top: -60px !important;
+  margin-bottom: 20px;
 }
 
 .trip-types {
@@ -17516,6 +17517,7 @@ h2 span {
   background: #fafafa;
   padding: 10px 12px;
   border-radius: 6px;
+  border: 3px solid #fafafa;
 }
 
 .input-block label {
@@ -17583,4 +17585,38 @@ h2 span {
   margin: 0 auto;
   border-radius: 10px;
   color: #fff;
+}
+
+.airport-fields {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: 10px;
+  align-items: end;
+}
+
+.swap-button-container {
+  position: absolute;
+  background-color: #fff;
+  margin-left: 3px;
+  color: rgb(0, 195, 255);
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+.airport-display {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  margin-bottom: 6px;
+}
+
+.airport-display h2 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.airport-display p {
+  margin: 0;
+  color: #888;
 }
