--- a/public/assets/css/holidayStyle.css
+++ b/public/assets/css/holidayStyle.css
@@ -1,13 +1,3 @@
-
-img {
-    width: 100%;
-    display: block;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-
 /* ------------------------------------------------------------------------------------------------------- */
 
 /* Main css */
@@ -263,4 +253,10 @@ img {
     display: block;
     overflow: hidden;
     height: 100vh;
+}
+.card__img>img {
+    width: 100%;
+    display: block;
+    height: 100%;
+    object-fit: cover;
 }
