--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,6 +38,7 @@ TABLE CONTENT
 @import url(../css/plugins/bootstrap-datepicker.css);
 @import url(../css/plugins/bootstrap-datepicker3.css);
 @import url(../css/plugins/slick.css);
+@import url(../css/tailwind.min.css);
 
 :root {
   --bs-border-color: #e4e6e8;
@@ -91,6 +92,10 @@ TABLE CONTENT
 /*import vendors*/
 /*import plugins*/
 /*RESET*/
+
+body{
+  background: #fff0ac42;
+}
 html,
 body,
 div,
@@ -176,7 +181,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  font: inherit; 
   vertical-align: baseline;
 }
 
@@ -2280,7 +2285,8 @@ body {
   line-height: 22px !important;
   font-family: var(--manrope);
   font-weight: 700 !important;
-  background-color: var(--bs-button-bg-2);
+/*  background-color: var(--bs-button-bg-2);*/
+  background-color: orange;
   border-radius: 50px;
   border: 1px solid var(--bs-border-color);
 }
@@ -7836,9 +7842,22 @@ label {
   width: 17.5%;
 }
 
+.footer_overlay{
+  background: #000000d6;
+}
+
 .footer {
-  background-color: var(--bs-background-1000);
-  padding: 40px 0px 0px 0px;
+/*  background-color: var(--bs-background-1000);*
+/*  #000000d6*/
+
+    background: url(https://img.freepik.com/free-photo/tourist-carrying-baggage_23-2151747383.jpg?t=st=1742379289~exp=1742382889~hmac=d5b469b…&w=1380);
+/*    background: url(https://img.freepik.com/premium-photo/rear-view-friends-with-arms-raised-standing-mountain-against-blue-sky_1048944-23429425.jpg?w=1380);*/
+/*    background: url(https://img.freepik.com/premium-photo/travel-theme-background_78899-14283.jpg?w=1380);*/
+/*    background: url(https://img.freepik.com/premium-photo/enhancing-vacation-packages-with-ai-ai-algorithm-vacation-package-icons-optimizing-travel_980716-468448.jpg?w=1380);*/
+/*    padding: 40px 0px 0px 0px;*/
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .footer .phone-support {
@@ -17828,8 +17847,8 @@ h2 span {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow-x: hidden;
-    overflow-y: auto;
+/*    overflow-x: hidden;*/
+/*    overflow-y: auto;*/
 /*    z-index:-9;*/
     /*    */
 
@@ -18061,6 +18080,15 @@ h2 span {
   text-align: start;
 }
 
+.box_left_ddr1{
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.box_left_ddr2{
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
 
 .b_right_2px:hover{
   background: #e7e7e7;
@@ -18080,13 +18108,15 @@ h2 span {
   position: relative;
 }
 .active_border_org1:after {
-content: "";
+    
+    transition: width 2s;
+    content: "";
     position: absolute;
     height: 6px;
-    width: 100px;
+    width: 80px;
     background: #ff942b;
     top: -14px;
-    left: -14px;
+    left: -2px;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     margin: 0px auto;
@@ -18220,7 +18250,8 @@ content: "";
 }
 
 .txt_travelClass::after{
-    border: solid #008cff;
+    border: solid #EB5B00;
+/*    border: solid #008cff;*/
     border-width: 0 2px 2px 0;
     display: inline-block;
     padding: 3px;
@@ -18228,7 +18259,7 @@ content: "";
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     vertical-align: top;
-    margin: 3px 0 0 8px;
+    margin: 7px 0 0 10px;
     transition: all 0.3s ease-in-out;
 }
 .txt_travelFrom::after {
@@ -18593,10 +18624,11 @@ content: "";
     border-radius: 100%;
     /* border: 2px solid #e8620c; */
     box-shadow: 0px 0px 10px -4px #d68400;
+    z-index: 9;
 }
 
 .offermicro_section{
-  padding: 50px;
+    padding: 6px 50px;
     box-shadow: 0px 0px 16px -5px gray;
     border-radius: 10px
 }
@@ -18608,7 +18640,7 @@ content: "";
 .offersSection_1{
   box-shadow: 0px 0px 20px -1px lightgray;
   display: flex;
-    width: 480px;
+/*    width: 480px;*/
 /*    background: red;*/
     height: 180px;
     border-radius: 7px;
@@ -18623,15 +18655,49 @@ content: "";
   width: 70%;
 }
 .view_offer{
-  color: white;
+    color: white;
     background: orange;
     width: 40%;
     text-align: center;
     padding: 7px;
-    bottom: 0px;
-    left: 0px;
+    bottom: 20px;
+    left: 20px;
     border-radius: 10px;
-/*    position: absolute;*/
+    position: absolute;
+}
+.bx_shadow_dr1{
+/*  box-shadow: 0px 0px 19px 2px lightgray;*/
+    -webkit-box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .15);
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, .15);
+    border-radius: 6px;
+}
+
+.custome_addBtn1{
+  border: 1.5px solid #a7a19d;
+  box-shadow: 0px 0px 14px -5px gray;
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+.line_height{
+  line-height: 18px;
+}
+
+.grid_w_1{
+  width: 30%;
+}
+.grid_w_2, .grid_w_3{
+  width: 20%;
+}
+.grid_w_4{
+  width: 30%;
+}
+.lh_18{
+  line-height: 18px;
 }
 @media (max-width: 1440px) and (min-width: 1024px) {
   .w_90{
