--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -94,8 +94,12 @@ TABLE CONTENT
 /*import plugins*/
 /*RESET*/
 
+html {
+  scroll-behavior: smooth;
+}
 body{
   background: #fff0ac42;
+  scroll-behavior: smooth;
 }
 html,
 body,
@@ -18699,6 +18703,13 @@ h2 span {
 }
 .lh_18{
   line-height: 18px;
+}
+
+
+.border__custome_sl2{
+/*  border-color: rgb(251 110 43) !important;*/
+  border-radius: 100px;
+  box-shadow: 0px 0px 11px -4px #ffb235;
 }
 @media (max-width: 1440px) and (min-width: 1024px) {
   .w_90{
