--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -19404,6 +19404,7 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
   font-size: 0.75rem;
   color: #ef4444;
 }
+
 .text-4aa301 {
   color: #4aa301;
 }
@@ -19441,4 +19442,8 @@ xl  80rem (1280px)  @media (width >= 80rem) { ... }
 
 .stepper_input::placeholder {
   font-size: 13px;
+}
+
+.room_options {
+  border-bottom: 2px solid #ccc !important;
 }
